# TalentScreen-Intelligent-Fraud-Detection-for-Secure-Hiring

talentscreen_final/: README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
talentscreen_final/server/: app.py
talentscreen_final/talentscreen/: __init__.py  data.py  env.py  models.py  tasks.py
