[project]
name = "talentscreen-openenv"
version = "0.1.0"
description = "TalentScreen OpenEnv - Hiring Fraud Detection"
authors = [
    { name = "Rakasri" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
