[project]
name = "talentscreen-openenv"
version = "0.1.0"
description = "TalentScreen OpenEnv - Hiring Fraud Detection"
authors = [
    { name = "Rakasri" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

# ✅ IMPORTANT (this fixes script error)
[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
