[project]
name = "talentscreen-openenv"
version = "0.1.0"
description = "TalentScreen OpenEnv - Hiring Fraud Detection"
authors = [
    { name = "Rakasri" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "requests==2.32.3",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
